[package]
name = "locomix"
version = "0.1.0"
authors = ["Sergey Ulanov <sulanov@gmail.com>"]

[dependencies]
alsa = ">=0.2.0"
byteorder = "1.1.0"
getopts = "0.2"
libc = ">=0.2.32"
nix = ">=0.10.0"
rouille = ">=2.1.0"
serde = "1.0.27"
serde_derive = "1.0.27"
simd = "0.2.0"
tempfile = "2.2.0"
toml = "0.4.5"

[profile.release]
debug = true

[[bin]]
name = "locomix"
path = "src/locomix.rs"

[[bin]]
name = "test_filters"
path = "src/test_filters.rs"
