[package]
name = "locomix"
version = "0.1.0"
authors = ["Sergey Ulanov <sulanov@gmail.com>"]

[features]
default = [ "simd", "sdl2" ]

sdl2 = [ "mono_display/sdl2" ]

[dependencies]
alsa = ">=0.2.0"
byteorder = "1.1.0"
getopts = "0.2"
lazy_static = "1.0.2"
libc = ">=0.2.32"
nix = ">=0.10.0"
rouille = ">=2.1.0"
serde = "1.0.27"
serde_derive = "1.0.27"
tempfile = "2.2.0"
toml = "0.4.5"
rppal = "0.8.0"
simd = { version = "0.2.0", optional = true }
mono_display = "*"

[profile.release]
debug = true

[[bin]]
name = "locomix"
path = "src/locomix.rs"

[[bin]]
name = "test_filters"
path = "src/test_filters.rs"
