[package]
name = "locomix"
version = "0.1.0"
authors = ["Sergey Ulanov <sulanov@gmail.com>"]
edition = "2018"

[features]
default = [ "sdl2", "packed_simd" ]

sdl2 = [ "mono_display/sdl2" ]

[dependencies]
alsa = ">=0.2.0"
byteorder = "1.1.0"
getopts = "0.2"
lazy_static = "1.0.2"
libc = ">=0.2.32"
nix = ">=0.10.0"
pest = "2.1.1"
pest_derive = "2.1.0"
rouille = ">=2.1.0"
serde = "1.0.27"
serde_derive = "1.0.27"
tempfile = "2.2.0"
threadpool = "1.7.1"
toml = "0.4.5"
rppal = "0.8.0"
packed_simd = { version = "0.3.3", optional = true }
mono_display = "*"

[profile.release]
debug = true

[[bin]]
name = "locomix"
path = "src/locomix.rs"

[[bin]]
name = "test_filters"
path = "src/test_filters.rs"
